--- a/home.css
+++ b/home.css
@@ -1,6 +1,11 @@
-body {
+* {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+.body {
   margin: 0px;
   padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo-container {
@@ -25,12 +30,16 @@ body {
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  height: 15%;
+  height: 16%;
   width: 100%;
   padding: 0.8em;
   padding-top: 0;
   padding-left: 4em;
   padding-right: 4em;
+  overflow-y: hidden;
+  position: fixed;
+  z-index: 25;
+  opacity: 0.9;
 }
 .bi-list {
   color: white;
@@ -42,16 +51,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 50%;
+  width: 55%;
 }
 .admin {
   margin-top: 0.8em;
   background-color: rgb(30, 102, 164);
-  padding: 0.5em;
+  padding: 1em;
   border-radius: 1em;
   border: none;
   color: white;
   cursor: pointer;
+  font-size: 1em;
   &:hover {
     color: black;
   }
@@ -66,6 +76,7 @@ body {
 .nav-links {
   text-decoration: none;
   color: white;
+  font-size: 1.2em;
 }
 .nav-links:hover {
   color: orange;
@@ -84,7 +95,7 @@ body {
 
 /* section-1 */
 .section-1 {
-  background-image: url(./images/logobg-2.jpg);
+  background-image: url(./images/b1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
@@ -100,9 +111,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 0.5em;
+  margin-top: 0.8em;
   gap: 0.5em;
   position: relative;
+  background-color: rgb(30, 102, 164);
+  width: 10em;
+  border-radius: 1em;
   &:hover {
     /* background-color:rgb(30, 102, 164) ; */
     cursor: pointer;
@@ -112,7 +126,8 @@ body {
 .username {
   color: white;
   height: 1em;
-  margin-top: 0.5em;
+  margin-top: 1em;
+  overflow-y: hidden;
   &:hover {
     cursor: pointer;
     color: orange;
@@ -130,12 +145,639 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  z-index: 1000;
 }
 .userOptions-1 {
   display: none;
   position: absolute;
   background-color: rgb(30, 102, 164);
-  top: 2.5em;
-  width: 6em;
+  top: 5em;
+  width: 8em;
   border-radius: 1em;
+  /* border-top-left-radius: none;
+  border-top-right-radius: none; */
+  right: 16.9em;
+  z-index: 999;
+  height: auto;
+  width: 9.6em;
 }
+.section-1-content {
+  background-color: black;
+  height: 17em;
+  width: 35em;
+  opacity: 0.5;
+  border-radius: 1.5em;
+  position: absolute;
+  right: 29em;
+  top: 14em;
+  box-sizing: border-box;
+  padding: 1.5em;
+  text-align: center;
+  color: white;
+  gap: 2em;
+  overflow-y: hidden;
+}
+.section-1-content h1 {
+  overflow-y: hidden;
+  font-size: 2em;
+}
+.section-1_packages {
+  background-color: rgb(14, 72, 123);
+  border-radius: 1em;
+  padding: 1em;
+  border: none;
+  color: white;
+  opacity: none;
+  font-size: 1em;
+  &:hover {
+    color: black;
+  }
+}
+
+.section-2 {
+  height: 130vh;
+  width: 100vw;
+  background-color: rgb(14, 72, 123);
+  text-align: center;
+  padding: 3em;
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
+
+.section-2 h1 {
+  overflow-y: hidden;
+  color: white;
+  font-size: 2em;
+}
+
+.section-2-cards {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  align-items: center;
+  justify-content: center;
+  gap: 3em;
+  width: 100%;
+  height: 23em;
+}
+.card {
+  height: 20em;
+  width: 17em;
+  padding: 2em;
+  gap: 1em;
+  box-sizing: border-box;
+  text-align: center;
+  transition: transform 0.3s ease;
+  background-color: white;
+  border-radius: 1.5em;
+  overflow-y: hidden;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+.card h2 {
+  overflow: hidden;
+  font-size: 2em;
+}
+.bi-globe-central-south-asia,
+.bi-airplane-fill,
+.bi-building-fill,
+.bi-megaphone-fill {
+  font-size: 2.5em;
+}
+.section-2-part {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  gap: 2em;
+}
+.map-image {
+  height: auto;
+  width: auto;
+}
+.section-2-part-2 {
+  background-color: white;
+  height: 15em;
+  width: 40em;
+  border-radius: 2em;
+}
+.section-2-part-2 h1 {
+  color: black;
+}
+.btn-readMore {
+  background-color: #007bff;
+  padding: 1em;
+  color: white;
+  border-radius: 1em;
+  border: none;
+}
+.section-3 {
+  height: auto;
+  width: 100vw;
+  text-align: center;
+  padding: 2em;
+  box-sizing: border-box;
+  background-color: rgb(14, 72, 123);
+}
+.section-3 h1 {
+  color: white;
+  font-size: 2.1em;
+  margin-bottom: 1.3em;
+}
+.section-3-cards {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  justify-content: space-around;
+  align-items: center;
+  height: 20em;
+  width: 100%;
+}
+.gallery {
+  height: 18em;
+  width: 16em;
+  border-radius: 1em;
+  transition: transform 0.3s ease;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+/* packages */
+
+#package {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* margin-top: 50px; */
+  /* row-gap: 20px; */
+  /* justify-content: space-between; */
+  align-items: center;
+  height: 170vh;
+}
+
+#package h1 {
+  color: white;
+}
+
+.package-body {
+  display: flex;
+  column-gap: 22px;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 32px;
+  overflow-y: hidden;
+}
+
+.package-card {
+  width: 300px;
+  /* height: 450px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.package-card:hover {
+  transform: scale(1.02, 1.02);
+  transition: all 1s ease-out;
+}
+
+.package-card img {
+  width: 100%;
+  /* Make image fill the width of the card */
+  height: 200px;
+  /* Adjust as needed */
+  object-fit: cover;
+  /* Ensure the image covers the entire area */
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.package-card-body {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+}
+
+.package-card-body h3 {
+  color: black;
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.package-card-body p {
+  color: black;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rating i {
+  color: orange;
+}
+
+.package-card-body h4 {
+  color: black;
+  margin-top: 10px;
+}
+
+.package-card-body button {
+  height: 30px;
+  width: 100px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  align-self: center;
+  margin-top: 10px;
+  background-color: #5c469c;
+  color: white;
+}
+
+#book {
+  display: flex;
+  margin-top: 70px;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+/* section-4 */
+.section-4 {
+  height: 125vh;
+  width: 100vw;
+  background-color: rgb(14, 72, 123);
+  text-align: center;
+  padding: 3em;
+  box-sizing: border-box;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.section-4-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+.section-4-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  font-size: 1em;
+  height: auto;
+  width: 50%;
+  box-sizing: border-box;
+  gap: 1em;
+}
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.form-1 {
+  font-size: 1em;
+  border: none;
+  padding: 1em;
+  width: 28em;
+  border-radius: 1em;
+  text-decoration: none;
+  outline: none;
+}
+.labels {
+  display: flex;
+  flex-direction: column;
+  row-gap: 7px;
+  align-items: start;
+  justify-content: center;
+}
+.booknow {
+  padding: 1em;
+  border: none;
+  border-radius: 1em;
+  background-color: rgb(30, 102, 164);
+  color: white;
+  width: 30em;
+  margin-top: 2em;
+  cursor: pointer;
+  &:hover {
+    color: black;
+  }
+}
+
+.sendd {
+  padding: 1em;
+  border: none;
+  border-radius: 1em;
+  background-color: rgb(30, 102, 164);
+  color: white;
+  width: 30em;
+  margin-top: 2em;
+  cursor: pointer;
+  &:hover {
+    color: black;
+  }
+}
+
+/* section-5 */
+
+.section-5 {
+  height: 150vh;
+  width: 100vw;
+  background-color: rgb(14, 72, 123);
+  text-align: center;
+  padding: 3em;
+  box-sizing: border-box;
+  overflow-y: hidden;
+  /* display: flex;
+  justify-content: space-around;
+  align-items: center; */
+  color: white;
+}
+
+.section-5-cards {
+  margin-top: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5em;
+  height: 20em;
+}
+
+.section-5-card1 {
+  background-color: white;
+  height: 14em;
+  width: 22em;
+  color: black;
+  border-radius: 1em;
+  box-sizing: border-box;
+  padding: 1em;
+  overflow-y: hidden;
+  transform: rotate(17deg);
+  &:hover {
+    transform: none;
+    transition: 1s ease;
+  }
+}
+.gold-star {
+  font-size: 25px;
+  color: gold;
+}
+.comment-img {
+  height: 5em;
+  width: 5em;
+  background-image: url(./images/roshan.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+.cards-5-img {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 4em;
+}
+
+.comment-img-2 {
+  height: 5em;
+  width: 5em;
+  background-image: url(./images/rakesh.jpg);
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+.comment-img-3 {
+  height: 5em;
+  width: 5em;
+  background-image: url(./images/shiva.jpg);
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+.section-5-2 {
+  margin-top: 4em;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-5-21 {
+  width: 50%;
+  height: auto;
+  /* padding: 2em; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  padding-left: 4em;
+}
+
+.section-5-21 h1 {
+  font-size: 2.2em;
+}
+.section-5-22 {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+/* footer */
+
+.footer {
+  height: 18em;
+  width: 100%;
+  background-color: rgb(10, 34, 89);
+  display: flex;
+  justify-content: space-around;
+  justify-items: center;
+  color: white;
+  padding: 1em;
+  box-sizing: border-box;
+}
+.line {
+  background-color: white;
+  width: 100%;
+  height: 0.2em;
+}
+.footer-1 {
+  width: 30%;
+}
+.social-links {
+  display: flex;
+  gap: 1em;
+}
+.footer-links1 {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.footer-links {
+  text-decoration: none;
+  color: white;
+}
+.bi:hover {
+  color: orange;
+}
+
+.section-1-content h1 {
+  color: white;
+  opacity: 1;
+}
+
+/* media quries */
+
+
+
+
+
+
+
+/* General Styles */
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Navigation */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background: #333;
+  color: white;
+}
+
+.nav-links {
+  display: flex;
+  gap: 20px;
+}
+
+.nav-toggle {
+  display: none;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background: #333;
+      width: 100%;
+      padding: 10px;
+  }
+  
+  .nav-links.nav-show {
+      display: flex;
+  }
+  
+  .nav-toggle {
+      display: block;
+  }
+}
+
+/* Section 1 */
+.section-1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 20px;
+}
+
+.section-1-content {
+  flex: 1;
+  min-width: 300px;
+}
+
+.section-1 img {
+  max-width: 100%;
+  height: auto;
+  flex: 1;
+}
+
+@media (max-width: 1024px) {
+  .section-1 {
+      flex-direction: column;
+      text-align: center;
+  }
+}
+
+/* Section 2 - Map Image */
+.map-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 50%;
+  overflow: hidden;
+}
+
+.map-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .map-container {
+      padding-bottom: 75%;
+  }
+}
+
+/* Footer */
+.footer {
+  text-align: center;
+  padding: 20px;
+  background: #222;
+  color: white;
+}
+
+@media (max-width: 480px) {
+  .footer {
+      font-size: 14px;
+  }
+}
+
+
